--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                  <p>The first print that I worked on was the keychain, I found this to be a relatively easy print because the template was pre-made and all we had to edit was the name. This print was done on the Prusa mini using the Prusa native software for slicing. The settings used during the print were .15mm speed presets, no supports/brim, 15% infill, PLA filament, and 3.6 grams of used filament. The print went well with no problems in the workflow, simply slicing the template and uploading the files onto the USB for the printer was all that was required. The final product of the print was solid with only a little bit of accuracy lacking in the small details of the letters along with some stringing there, which I assume is because of the tiny size of the print and the speed preset used, besides this though it was a successful print.</p>
                 <img src = "assets/nametagpic.png">
             </div>
+        </div>
                 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
