--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <img src = "assets/nametagpic.png">
             </div>
         </div>
+        <img src = "assets/nametagpic.png">
                 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
