--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <body>
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
@@ -27,6 +28,7 @@
             </div>
         </div>
         <img src = "assets/nametagpic.png">
+    </body>
                 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
