--- a/startbootstrap-bare-gh-pages/index.html
+++ b/startbootstrap-bare-gh-pages/index.html
@@ -23,8 +23,13 @@
                  <h3>Project 1</h3>
                  <p>Part 1 - Nametag</p>
                  <p>The first print that I worked on was the keychain, I found this to be a relatively easy print because the template was pre-made and all we had to edit was the name. This print was done on the Prusa mini using the Prusa native software for slicing. The settings used during the print were .15mm speed presets, no supports/brim, 15% infill, PLA filament, and 3.6 grams of used filament. The print went well with no problems in the workflow, simply slicing the template and uploading the files onto the USB for the printer was all that was required. The final product of the print was solid with only a little bit of accuracy lacking in the small details of the letters along with some stringing there, which I assume is because of the tiny size of the print and the speed preset used, besides this though it was a successful print.</p>
-                <img src = "./assets/nametagpic.jpg" alt="nametag" width="400" height="400">
+                <img src = "./assets/nametagpic.jpg" alt="nametag" width="400" height="410">
+                <p>Part 2 - Second Print/Stress Test</p>
+                <p>The second print for this project was the stress test print with the idea of the print being to push the prusa mini to its maximum capabilities where it will surely fail. For this print, I got the stl file from thang.com by typing in “stress test” and picking one that measured many different printing settings as well as having overhanging pieces. Settings used were .15mm structural presets, no supports, 15% infill, and PLA filament. The final print did ultimately fail with a lot of stringing all across rendering the details of the print non legible. My main assumption is that this is due to the size of the print, being that it is so small the printer is having a hard time making the key components of the print small as well. Although, considering the point was to make a failed print I would say that this print was successful.</p>
+                <img src = "./assets/stresstest.jpg" alt="stress" width="400" height="410">
+                <img src = "./assets/stresstest2.jpg" alt="stress2" width="400" height="410"
             </div>
+        </div>
                 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
