--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -40,6 +40,7 @@
                <img src = "./assets/sketch.jpg" alt="sketch" width="300" height="300">
                <img src = "./assets/Tlnkercad1.png" alt="t" width="300" height="300">
                <img src = "./assets/Tinkercad2.png" alt="tinker2" width="300" height="300">
+               <img src = "./assets/TinkercadPrusa1.png" alt="tinkerp" width="300" height="300">
                 
                 
         <!-- Bootstrap core JS-->
