--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -71,7 +71,9 @@
            <p>For the laser cutting portion of the project we had a bit of difficulty creating the finger joints required for the chassis as my partner was making them manually. As a result, the finger joints didnt fit the exact measurements in some parts and due ot restrictions on time we ended up compromising buy deciding to just glue in the circuit board with another wood piece behind to keep it from shifting inside our enclosure. Once we glued in everything it was pretty simple and we ended up moving the battery pack on the outside of the chassis for space reasons and accessibility to change the batteries. Another important note here is that we had to runa second laser cut to make a larger top and bottom piece in order to support the build measurements with this new solution but that did not pose too much of a difficulty. Below here are all laser cut related photos.</p>
            <div style="height: 20px;"></div>
            <p>Laser Cut Photos</p>
-           
+           <img src = "./assets/sketch1.png" alt="f1" width="300" height="300">
+           <img src = "./assets/lasersettings.jpg" alt="f1" width="300" height="300">
+           <img src = "./assets/lasercutfinal.gif" alt="f1" width="300" height="300">
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
