--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -85,7 +85,8 @@
         <div style="height: 20px;"></div>
         <p>The ultimate end goal was to print and assemble a fully functional, 3d printed prosthetic hand. We decided to go with one of the standard models as defined in the project description which was the Phoenix Hand V3. Our methodology for assembly and printing went much simpler than expected. We decided to print all of the smaller pieces in one print and we decided to print the palm and bracket piece individually by themselves under the settings  .15mm speed, PLA filament, 15% infill, no brim, supports everywhere with the overall print time amounting to about 10 hours for the smaller piece print and 2 hours for the bracket and palm piece respectively. After the print was completed we removed the supports which provided a slight challenge as we did not need to print with supports at all because they filled up tiny holes in the pieces that we had to use filers and pliers to remove. However, this dilemma did not stop our progress and we were able to assemble the hand following the provided instruction guide and a youtube video provided by NIH on the assembly.</p>
         <div style="height: 20px;"></div>
-        
+        <img src = "./assets/small.png" alt="f1" width="320" height="320">
+        <img src = "./assets/small2.png" alt="f1" width="320" height="320">
             
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
