--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -87,6 +87,10 @@
         <div style="height: 20px;"></div>
         <img src = "./assets/small.png" alt="f1" width="320" height="320">
         <img src = "./assets/small2.png" alt="f1" width="320" height="320">
+        <img src = "./assets/finalhand1.jpg" alt="f1" width="320" height="320">
+        <img src = "./assets/finalhand2.jpg" alt="f1" width="320" height="320">
+        <img src = "./assets/finalhand3.jpg" alt="f1" width="320" height="320">
+
             
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
