--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -90,6 +90,8 @@
         <img src = "./assets/finalhand1.jpg" alt="f1" width="320" height="320">
         <img src = "./assets/finalhand2.jpg" alt="f1" width="320" height="320">
         <img src = "./assets/finalhand3.jpg" alt="f1" width="320" height="320">
+        <div style="height: 20px;"></div>
+        
 
             
         <!-- Bootstrap core JS-->
