--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -92,8 +92,8 @@
         <img src = "./assets/finalhand3.jpg" alt="f1" width="320" height="320">
         <div style="height: 20px;"></div>
         <p>After successfully printing and assembling the hand, we then proceeded to the next step of the project which was to create a modification to the existing design that we thought would improve functionality. We decided to add an extra bump to the grove that allows the tensioner to slide on to the palm piece in either direction. Allowing for easy assembly regardless of the orientation of either piece. This design feature would help someone on the assembly side more than anything. However, we can think of a situation where someone who is trying to print a hand for themselves would potentially have an easier time in said assembly process because of this added functionality.</p>
-        
-
+        <img src = "./assets/fullmod1.jpeg" alt="f1" width="320" height="320">
+        <img src = "./assets/fullmod2.jpeg" alt="f1" width="320" height="320">
             
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
