--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -94,6 +94,32 @@
         <p>After successfully printing and assembling the hand, we then proceeded to the next step of the project which was to create a modification to the existing design that we thought would improve functionality. We decided to add an extra bump to the grove that allows the tensioner to slide on to the palm piece in either direction. Allowing for easy assembly regardless of the orientation of either piece. This design feature would help someone on the assembly side more than anything. However, we can think of a situation where someone who is trying to print a hand for themselves would potentially have an easier time in said assembly process because of this added functionality.</p>
         <img src = "./assets/fullmod1.jpeg" alt="f1" width="320" height="320">
         <img src = "./assets/fullmod2.jpeg" alt="f1" width="320" height="320">
+        </div>
+    </div>
+    <div class="container">
+        <text-align: center;>
+        <div class="text-center mt-12">
+        <div style="height: 60px;"></div>
+        <h3>Scavenger Hunt</h3>
+        <div style="height: 20px;"></div>
+        <p>For this project, the primary objective was to go around campus and find different designs that align with the various descriptions you will see below, essentially a standard scavenger hunt as the name suggests. You will also find pictures of the referred to designs as well as brief notations on them.</p>
+        <div style="height: 20px;"></div>
+        <h3>Designs for access</h3>
+        <p>1. Design for navigation without one or more of the 5 senses- Braille for those who can’t read the signs - If you can not see because of blindness, you can use the braille on the door to tell you the room number</p>
+        <div style="height: 20px;"></div>
+        <p>2. Design for forms of assistance, broadly defined - Emergency call tower - Tower that can be used to make a direct call to the police in case of emergency. In this photo they were covered due to repairs but have since become available.</p>
+        <div style="height: 20px;"></div>
+        <p>3. Design for aging, broadly defined - Elevator to traverse floors easily for those who have a hard time climbing stairs - Older people tend to have problems with steep stairs especially like the ones in the physics building where this elevator is located.</p>    
+        <div style="height: 20px;"></div>
+        <p>4. Design for young children (no parks or playgrounds) - Child sized urinal</p>
+        <div style="height: 20px;"></div>
+        <p>5. Design for wheeled mobile gear (chairs, bikes, strollers, etc.) - Accessibility button that allows for wheelchairs to pass through doors more easily - Button allows for the door to open automatically</p>    
+        
+
+
+
+
+
             
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
