--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -114,7 +114,11 @@
         <p>4. Design for young children (no parks or playgrounds) - Child sized urinal</p>
         <div style="height: 20px;"></div>
         <p>5. Design for wheeled mobile gear (chairs, bikes, strollers, etc.) - Accessibility button that allows for wheelchairs to pass through doors more easily - Button allows for the door to open automatically</p>    
-        
+        <img src = "./assets/Braille.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Emergency.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Elevator.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Urinal.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Button.jpg" alt="tinkerp3" width="300" height="300">
 
 
 
