--- a/dailonsportfolio/index.html
+++ b/dailonsportfolio/index.html
@@ -100,6 +100,7 @@
         <text-align: center;>
         <div class="text-center mt-12">
         <div style="height: 60px;"></div>
+        <text-align: center;>
         <h3>Scavenger Hunt</h3>
         <div style="height: 20px;"></div>
         <p>For this project, the primary objective was to go around campus and find different designs that align with the various descriptions you will see below, essentially a standard scavenger hunt as the name suggests. You will also find pictures of the referred to designs as well as brief notations on them.</p>
@@ -107,9 +108,9 @@
         <h3>Designs for access</h3>
         <p>1. Design for navigation without one or more of the 5 senses- Braille for those who can’t read the signs - If you can not see because of blindness, you can use the braille on the door to tell you the room number</p>
         <div style="height: 20px;"></div>
-        <p>2. Design for forms of assistance, broadly defined - Emergency call tower - Tower that can be used to make a direct call to the police in case of emergency. In this photo they were covered due to repairs but have since become available.</p>
+        <p>2. Design for forms of assistance, broadly defined - Emergency call tower - Tower that can be used to make a direct call to the police in case of emergency. In this photo they were covered due to repairs but have since become available</p>
         <div style="height: 20px;"></div>
-        <p>3. Design for aging, broadly defined - Elevator to traverse floors easily for those who have a hard time climbing stairs - Older people tend to have problems with steep stairs especially like the ones in the physics building where this elevator is located.</p>    
+        <p>3. Design for aging, broadly defined - Elevator to traverse floors easily for those who have a hard time climbing stairs - Older people tend to have problems with steep stairs especially like the ones in the physics building where this elevator is located</p>    
         <div style="height: 20px;"></div>
         <p>4. Design for young children (no parks or playgrounds) - Child sized urinal</p>
         <div style="height: 20px;"></div>
@@ -119,9 +120,31 @@
         <img src = "./assets/Elevator.jpg" alt="tinkerp3" width="300" height="300">
         <img src = "./assets/Urinal.jpg" alt="tinkerp3" width="300" height="300">
         <img src = "./assets/Button.jpg" alt="tinkerp3" width="300" height="300">
-
-
-
+        <div style="height: 20px;"></div>
+        <h3>Designs against access</h3>
+        <div style="height: 20px;"></div>
+        <p>6. Design with physical barriers -  Swipe Access required to get in the MakerLab if nobody is inside -  If nobody with swipe access is in the maker lab, or it is closed past open hours then the locked door poses a barrier if you don’t have swipe access</p>
+        <div style="height: 20px;"></div>
+        <p>7. Design with a lack of information - Usdan campus bus stop - All of the bus routes for campus are on the app trip shot which is not mentioned anywhere around the bus stop</p>
+        <div style="height: 20px;"></div>
+        <p>8. Design with an absence of help -  Long accessibility ramp in science building - This is a very long ramp in which someone on a wheelchair may have a hard time pushing themselves up, as there is no mechanical feature to help them climb the ramp</p>
+        <img src = "./assets/Makerlab.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Bus.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Ramp.jpg" alt="tinkerp3" width="300" height="300">
+        <div style="height: 20px;"></div>
+        <h3>Design priorities in the built environment</h3>
+        <div style="height: 20px;"></div>
+        <p>9. Design for historical specificity -  Old castle from Brandeis’s original campus next to Skyline - This castle is from the original campus that was here before Brandeis, they decided to keep this one standing while tearing down the one that used to be in skyline’s place</p>
+        <div style="height: 20px;"></div>
+        <p>10. Design for environmental sustainability - Choose to Reuse Container return station - Choose to reuse is a service in which students can take reusable containers to eat dining hall food in dorms. When they are done with the food they can return the container for cleaning reducing disposable waste</p>
+        <div style="height: 20px;"></div>
+        <p>11. Design for health and well-being - Refillable hand sanitizer pump</p>
+        <div style="height: 20px;"></div>
+        <p>12. Design for recreation - Basketball goal outside of Massell Quad</p>
+        <img src = "./assets/Castle.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Choose2.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Sanitizer.jpg" alt="tinkerp3" width="300" height="300">
+        <img src = "./assets/Basketball.jpg" alt="tinkerp3" width="300" height="300">
 
 
             
